Fixing issue with generic.css and overlapping in view scaffolds. Thanks to 'euromark' for the patch. Fixes #1787

--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -215,6 +215,7 @@ dt {
 	font-weight: bold;
 	padding-left: 4px;
 	vertical-align: top;
+	width: 10em;
 }
 dd {
 	margin-left: 10em;
